# data-trading

./: README.md  pyproject.toml
db/: df_etf.xlsx
finance_fns/: index_fns.py  path_help.py  stock_data.py  stock_handle.py
notebook/: dd_mdd.ipynb  ewm.ipynb  finance_data_reader.ipynb  find_code.ipynb
notebook_part1/: dd_mdd.ipynb  ewm.ipynb  krx_df_2024_12_13.csv  krx_df_2024_12_17.csv  rsi.ipynb
notebook_part2/: plotly_items.ipynb
