[tool.poetry]
name = "data-trading"
version = "0.1.0"
description = ""
authors = ["joonho <jh.lee@spira-t.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
finance-datareader = "^0.9.94"
plotly = "^5.24.1"
notebook = "^7.3.1"
matplotlib = "^3.10.0"
spyder = "^6.0.3"
openpyxl = "^3.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
